Fixed error progress bar not showing up

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -236,30 +236,32 @@ section{
     animation: showText 0.5s 1s linear forwards;
     opacity: 0;
 }
-.Technical-bars .bar .progress-line{
+.Technical-bars .bar .progress-line {
     position: relative;
     border-radius: 10px;
     width: 100%;
     height: 5px;
     background-color: #000;
-    animation: animate 1s cubic-bezier(1,0,0,5,1) forwards;
-    transform: scaleX(0);
+    animation: animate 1s cubic-bezier(0, 0, 1, 1) forwards;
     transform-origin: left;
 }
+
 @keyframes animate {
-    100%{
+    100% {
         transform: scaleX(1);
     }
 }
-.Technical-bars .bar .progress-line span{
+
+.Technical-bars .bar .progress-line span {
     height: 100%;
     background-color: #0ef;
     position: absolute;
     border-radius: 10px;
-    animation: animate 1s s cubic-bezier(1,0,0,5,1) forwards;
+    animation: animate 1s cubic-bezier(0, 0, 1, 1) forwards;
     transform: scaleX(0);
     transform-origin: left;
 }
+
 .progress-line.html span{
     width: 90%;
 }
@@ -321,6 +323,7 @@ section{
         opacity: 1;
     }
 } 
+
 .radial-bars{
     width: 100%;
     display: flex;
@@ -641,6 +644,12 @@ section{
     margin-top: 50px;
 }
 
+.services-list img{
+    width:100%;
+    object-cover:fit;
+    height:132px;
+}
+
 .services-list div {
     width: calc(33.333% - 20px); /* Set the width for three columns with some spacing */
     background-color: transparent;
@@ -689,11 +698,6 @@ section{
     display: inline-block;
 }
 
-/* Optional: Adjust the spacing between items */
-.services-list::after {
-    content: ""; /* Create an invisible pseudo-element */
-    flex: auto; /* Fill the remaining space */
-}
 
 @media (max-width: 1200px) {
     .services-list div {
